# argonaut-example

./: Cargo.toml
node/: Cargo.toml
node/src/: service.rs
primitives/argonaut/: Cargo.toml
primitives/argonaut/src/: lib.rs
