[package]
name = "argonaut-primitives"
version = "4.0.0-dev"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
pqcrypto-falcon = "0.2.10"
pqcrypto-traits = "0.3.4"
sp-runtime-interface = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false }

[build-dependencies]

[features]
default = ["std"]
std = [
    'sp-runtime-interface/std'
]